# tcgo

./: .env.example  DEVELOPMENT_WORKFLOW.md  FACTORY_GUIDE.md  MECHANIC_SCANNER_GUIDE.md  MECHANIC_STUDIO_PRODUCTION.md  MONETIZATION_GUIDE.md  PRIORITY_ROADMAP.md  README.md  README_SETUP.md  copy-update.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vitest.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml
backend/: README.md  app.py  pyproject.toml
entities/: Card  Deck  GameRoom  Match  PlayerRank
scripts/: build-limitless-index.mjs
src/: App.jsx  index.css  main.jsx
src/components/: SplashScreen.jsx
src/components/battle/: ActivePokemonSlot.jsx  AttackPromptModal.jsx  BattleActionBar.jsx  BattleControls.jsx  BattleHand.jsx  (+9 more)
src/lib/: AuthContext.jsx  PageNotFound.jsx  aiDeckBuilder.js  aiOpponent.js  battlePassSystem.js  cardCatalog.js  cardData.js  cardMechanicConfigs.js  customMechanics.js  gameConstants.js  gameEngine.js  limitlessIndex.json  localDb.js  mechanicLibrary.js  mechanicPrimitives.js  multiplayerSync.js  networkClient.js  packSystem.js  pokemonTCGApi.js  premadeDecks.js  premiumTier.js  releaseSync.js  soundManager.js  tcgdex.js  typeIcons.jsx
src/pages/: AIDeckBuilder.jsx  Admin.jsx  Battle.jsx  BattlePass.jsx  CardMechanicFactory.jsx  Collection.jsx  DeckBuilder.jsx  DeckShare.jsx  Decks.jsx  Home.jsx  Leaderboard.jsx  Lobby.jsx  MechanicBuilder.jsx  MechanicStudio.jsx  PackShop.jsx  Premium.jsx  SoundAdmin.jsx
tests/: aiDeckBuilder.test.js  engine.test.js
tests/lib/: promptAttacks.test.js
(+16 files in other folders)
